# pico-soil-sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  arm-none-eabi-gcc.cmake  flash.jlink
boot2/include/pico/: asm_helper.S
docs/: bare-metal-guide.md
include/: rp2040.h  rp2040_helpers.h
ld/: memmap.ld
src/: main.c  startup.c  system_RP2040.c
